--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "jaspaul/laravel-rollout",
+    "name": "soapbox/laravel-rollout",
     "description": "A package to integrate rollout into your Laravel project.",
     "keywords": ["laravel", "rollout"],
     "license": "MIT",
